# baremetal

./: .gitignore  Makefile  README.md  SConstruct  cpu.c  cpu.h  gdb.cmd  kernel_lib.c  kernel_lib.h  linker.ld  main.c  main.cpp  startup.s  todo.txt  typedefs.h
aarch64-c-qemu/: CMakeLists.txt  main.c
aarch64-c-qemu-irq/: SConstruct  kernel_lib.c
aarch64-cpp-qemu/: gdb.cmd
aarch64-cpp-qemu/src/: std_impl.c
aarch64-example/: main.c  startup.s
aarch64-qemu-irq/: gdb.cmd  linker.ld
aarch64-test-qemu/: CMakeLists.txt  linker.ld  out.txt  startup.s
aarch64-test-qemu/src/: main.cpp  std_impl.c
arch/aarch64/: init_arch.h  intrinsics.h
arch/arm_common/: gic.cpp  gic.h
arm-c-cmake/: CMakeLists.txt  compile.bat  linker.ld  main.c  startup.s
arm-c-qemu/: CMakeLists.txt
arm-cpp-qemu/: CMakeLists.txt  cpp_impl.cpp  gdb.cmd  linker.ld  main.cpp  startup.s  startup_custom.s  std_impl.c
arm-qemu-cpp/: SConstruct  linker.ld  start_qemu.bat
cmake_toolchains/: aarch64.cmake  aarch64_test.cmake  arm.cmake  arm_nosys.cmake  qemu_gdb_server.cmake  riscv_rv32i.cmake
interrupt/: exception_entries.h  interrupt.cpp  interrupt.h
mini-kernel/: CMakeLists.txt  interface.h  main.cpp
mini-kernel/arch/aarch64/: aarch64.cpp  aarch64.h  gic.cpp  gic.h  linker.ld  startup.S  startup.s  todo.txt  vector_tbl.h
mini-kernel/arch/aarch64/include/: aarch64.h
mini-kernel/board/qemu_aarch64/: board.cpp  board.h
mini-kernel/include/: mk_types.h
riscv-cpp-qemu/: CMakeLists.txt  a.out  linker.ld  startup.s
riscv-cpp-qemu/src/: main.cpp
snippets/: vscode_launch.json__debug.txt
soc/qemu/: console.cpp  misc.cpp
util/: memory.cpp  memory.h  print.cpp  print.h  string.cpp  string.h
